changes added by tejaswini

--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -442,7 +442,7 @@
       </span>
       <div class="menu-sub menu-sub-accordion" routerLinkActive="menu-active-bg">
         <div *ngIf="isExpenseAccounting" class="menu-item menu-accordion" routerLinkActive="here show"
-          data-kt-menu-trigger="click">
+          data-kt-menu-trigger="click" routerLink="/expense/expenseAccounting">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
@@ -452,7 +452,7 @@
           </span>
         </div>
         <div *ngIf="isDailyReportExpense" class="menu-item menu-accordion" routerLinkActive="here show"
-          data-kt-menu-trigger="click">
+          data-kt-menu-trigger="click" routerLink="/expense/dailyReportExpense">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
