changes added by tejaswini

--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -508,7 +508,7 @@
       </span>
       <div class="menu-sub menu-sub-accordion" routerLinkActive="menu-active-bg">
         <div *ngIf="isCredit" class="menu-item menu-accordion" routerLinkActive="here show"
-          data-kt-menu-trigger="click">
+          data-kt-menu-trigger="click" routerLink="/credit/bookLedger" >
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
@@ -518,7 +518,7 @@
           </span>
         </div>
         <div *ngIf="isAccounting" class="menu-item menu-accordion" routerLinkActive="here show"
-          data-kt-menu-trigger="click">
+          data-kt-menu-trigger="click" routerLink="/accounting/book">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
@@ -527,7 +527,7 @@
             </span>
           </span>
         </div>
-        <div *ngIf="isdsr" class="menu-item menu-accordion" routerLinkActive="here show" data-kt-menu-trigger="click">
+        <div *ngIf="isdsr" class="menu-item menu-accordion" routerLinkActive="here show" data-kt-menu-trigger="click" routerLink="/dsr/dsrDetails">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
@@ -537,7 +537,7 @@
           </span>
         </div>
         <div *ngIf="isCreditsales" class="menu-item menu-accordion" routerLinkActive="here show"
-          data-kt-menu-trigger="click">
+          data-kt-menu-trigger="click" routerLink="/ledger/creditSales">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
@@ -557,7 +557,7 @@
           </span>
           <div class="menu-sub menu-sub-accordion" routerLinkActive="menu-active-bg">
             <div *ngIf="isLedgerShiftWise" class="menu-item menu-accordion" routerLinkActive="here show"
-              data-kt-menu-trigger="click">
+              data-kt-menu-trigger="click" routerLink="/shift/shiftWise">
               <span class="menu-link">
                 <span class="menu-bullet">
                   <span class="bullet bullet-dot"></span>
@@ -567,7 +567,7 @@
               </span>
             </div>
             <div *ngIf="isLedgerDayWise" class="menu-item menu-accordion" routerLinkActive="here show"
-              data-kt-menu-trigger="click">
+              data-kt-menu-trigger="click" routerLink="/shift/dayWise">
               <span class="menu-link">
                 <span class="menu-bullet">
                   <span class="bullet bullet-dot"></span>
@@ -577,7 +577,7 @@
               </span>
             </div>
             <div *ngIf="isLedgerMonthWise" class="menu-item menu-accordion" routerLinkActive="here show"
-              data-kt-menu-trigger="click">
+              data-kt-menu-trigger="click" routerLink="/shift/monthWise">
               <span class="menu-link">
                 <span class="menu-bullet">
                   <span class="bullet bullet-dot"></span>
@@ -587,7 +587,7 @@
               </span>
             </div>
             <div *ngIf="isLedgerShiftTimeWise" class="menu-item menu-accordion" routerLinkActive="here show"
-              data-kt-menu-trigger="click">
+              data-kt-menu-trigger="click" routerLink="/shift/shiftTimeWise">
               <span class="menu-link">
                 <span class="menu-bullet">
                   <span class="bullet bullet-dot"></span>
@@ -597,7 +597,7 @@
               </span>
             </div>
             <div *ngIf="isBookOperatorWise" class="menu-item menu-accordion" routerLinkActive="here show"
-              data-kt-menu-trigger="click">
+              data-kt-menu-trigger="click" routerLink="/shift/operatorWise">
               <span class="menu-link">
                 <span class="menu-bullet">
                   <span class="bullet bullet-dot"></span>
@@ -623,7 +623,7 @@
         <span class="menu-arrow"></span>
       </span>
       <div class="menu-sub menu-sub-accordion" routerLinkActive="menu-active-bg">
-        <div *ngIf="isInfra" class="menu-item menu-accordion" routerLinkActive="here show" data-kt-menu-trigger="click">
+        <div *ngIf="isInfra" class="menu-item menu-accordion" routerLinkActive="here show" data-kt-menu-trigger="click" routerLink="/pump/infra">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
@@ -633,7 +633,7 @@
           </span>
         </div>
         <div *ngIf="isCashBill" class="menu-item menu-accordion" routerLinkActive="here show"
-          data-kt-menu-trigger="click">
+          data-kt-menu-trigger="click" routerLink="/pump/cashBill">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
@@ -684,7 +684,7 @@
               </span>
             </div>
             <div *ngIf="isAddLubeTaxSale" class="menu-item menu-accordion" routerLinkActive="here show"
-              data-kt-menu-trigger="click">
+              data-kt-menu-trigger="click" routerLink="/credit/AddLubeTaxGstSale">
               <span class="menu-link">
                 <span class="menu-bullet">
                   <span class="bullet bullet-dot"></span>
@@ -759,7 +759,7 @@
           </div>
         </div>
         <div *ngIf="isFuelPrice" class="menu-item menu-accordion" routerLinkActive="here show"
-          data-kt-menu-trigger="click">
+          data-kt-menu-trigger="click" routerLink="/pump/fuelPrice">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
