--- a/src/app/pages/dealer/expense/daily-report-expense/daily-report-expense.component.html
+++ b/src/app/pages/dealer/expense/daily-report-expense/daily-report-expense.component.html
@@ -1,1 +1,4 @@
-<p>daily-report-expense works!</p>
+<div class="card-header">
+    <b>Add Expense</b>
+</div>
+<app-feeds-widget14 class="card card-xxl-stretch mb-5 mb-xl-8"></app-feeds-widget14>
