--- a/src/app/pages/dealer/expense/expense-accounting/expense-accounting.component.html
+++ b/src/app/pages/dealer/expense/expense-accounting/expense-accounting.component.html
@@ -1,4 +1,4 @@
 <div class="card-header">
-    <b>Expense ACcounting</b>
+    <b>Expense Accounting</b>
 </div>
 <app-feeds-widget13 class="card card-xxl-stretch mb-5 mb-xl-8"></app-feeds-widget13>
