--- a/src/app/_metronic/partials/content/widgets/charts/charts-widget12/charts-widget12.component.html
+++ b/src/app/_metronic/partials/content/widgets/charts/charts-widget12/charts-widget12.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="container-fluid">
+<div class="container-fluid">
   <div class="row">
     <div class="col-12">
       <div class="card">
@@ -27,8 +27,7 @@
 
                   <ng-template #t let-date let-focused="focused">
                     <span class="custom-day" [class.focused]="focused" [class.range]="isRange(date)"
-                      [class.faded]="isHovered(date) || isInside(date)" (mouseenter)="hoveredDate = date"
-                      (mouseleave)="hoveredDate = null">
+                      [class.faded]="isHovered(date) || isInside(date)" (mouseenter)="hoveredDate = date">
                       {{ date.day }}
                     </span>
                   </ng-template>
@@ -119,7 +118,7 @@
                 </thead>
 
                 <tbody
-                  *ngFor="let data of getFuelPriceData   | slice: (page-1) * pageSize : (page-1) * pageSize + pageSize; let i = index">
+                  *ngFor="let data of getFuelPriceData | paginate: { itemsPerPage: 10, currentPage: p, totalItems: total }; let i = index">
 
                   <tr>
                     <td style="text-align: left;">{{i+1}} </td>
@@ -191,9 +190,11 @@
 
               <div class="text-md-right float-md-end pagination-rounded">
 
-                <ngb-pagination [collectionSize]="getFuelPriceData.length" [(page)]="page" [pageSize]="pageSize"
-                  [maxSize]="5" [rotate]="true" [boundaryLinks]="true">
-                </ngb-pagination>
+            <!-- begin::Pagination -->
+            <pagination-controls (pageChange)="pageChangeEvent($event)" previousLabel="" nextLabel=""
+                style="text-align: end; font-size: x-large; font-family: 'Font Awesome 6 Free'; font-style: oblique;">
+            </pagination-controls>
+            <!-- end::Pagination -->
               </div>
 
             </div>
@@ -206,4 +207,4 @@
       </div>
     </div>
   </div>
-</div> -->
+</div>
