changes added by tejaswini

--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -654,7 +654,7 @@
           </span>
           <div class="menu-sub menu-sub-accordion" routerLinkActive="menu-active-bg">
             <div *ngIf="isAddLubricant" class="menu-item menu-accordion" routerLinkActive="here show"
-              data-kt-menu-trigger="click">
+              data-kt-menu-trigger="click" routerLink="/pump/addLubricant" >
               <span class="menu-link">
                 <span class="menu-bullet">
                   <span class="bullet bullet-dot"></span>
@@ -664,7 +664,7 @@
               </span>
             </div>
             <div *ngIf="isAddLubricantPurchase" class="menu-item menu-accordion" routerLinkActive="here show"
-              data-kt-menu-trigger="click">
+              data-kt-menu-trigger="click" routerLink="/pump/addLubricantPurchase">
               <span class="menu-link">
                 <span class="menu-bullet">
                   <span class="bullet bullet-dot"></span>
@@ -674,7 +674,7 @@
               </span>
             </div>
             <div *ngIf="isViewLubricantPurchase" class="menu-item menu-accordion" routerLinkActive="here show"
-              data-kt-menu-trigger="click">
+              data-kt-menu-trigger="click" routerLink="/pump/viewLubricantPurchase">
               <span class="menu-link">
                 <span class="menu-bullet">
                   <span class="bullet bullet-dot"></span>
@@ -780,7 +780,7 @@
           </span>
           <div class="menu-sub menu-sub-accordion" routerLinkActive="menu-active-bg">
             <div *ngIf="isAccInfo" class="menu-item menu-accordion" routerLinkActive="here show"
-              data-kt-menu-trigger="click">
+              data-kt-menu-trigger="click" routerLink="/pump/ftAccountInfo">
               <span class="menu-link">
                 <span class="menu-bullet">
                   <span class="bullet bullet-dot"></span>
@@ -790,7 +790,7 @@
               </span>
             </div>
             <div *ngIf="isAllTollTran" class="menu-item menu-accordion" routerLinkActive="here show"
-              data-kt-menu-trigger="click">
+              data-kt-menu-trigger="click" routerLink="/pump/ftAllTollTransaction">
               <span class="menu-link">
                 <span class="menu-bullet">
                   <span class="bullet bullet-dot"></span>
@@ -800,7 +800,7 @@
               </span>
             </div>
             <div *ngIf="isActiveVeh" class="menu-item menu-accordion" routerLinkActive="here show"
-              data-kt-menu-trigger="click">
+              data-kt-menu-trigger="click" routerLink="/pump/ftActiveVehicle">
               <span class="menu-link">
                 <span class="menu-bullet">
                   <span class="bullet bullet-dot"></span>
