--- a/src/app/pages/dealer/pump/add-lubricant-purchase/add-lubricant-purchase.component.html
+++ b/src/app/pages/dealer/pump/add-lubricant-purchase/add-lubricant-purchase.component.html
@@ -1,1 +1,6 @@
-<p>add-lubricant-purchase works!</p>
+<div class="card-header">
+    <b>Lubricants Purchase </b>
+</div>
+<div>
+    <app-pump-tables-widget1></app-pump-tables-widget1>
+</div>
