--- a/src/app/pages/dealer/pump/view-lubricant-purchase/view-lubricant-purchase.component.html
+++ b/src/app/pages/dealer/pump/view-lubricant-purchase/view-lubricant-purchase.component.html
@@ -1,1 +1,6 @@
-<p>view-lubricant-purchase works!</p>
+<div class="card-header">
+    <b>Lubricants Purchase </b>
+</div>
+<div>
+    <app-pump-tables-widget2></app-pump-tables-widget2>
+</div>
