changes added by tejaswini

--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -810,7 +810,7 @@
               </span>
             </div>
             <div *ngIf="isTollPlaza" class="menu-item menu-accordion" routerLinkActive="here show"
-              data-kt-menu-trigger="click">
+              data-kt-menu-trigger="click" routerLink="/pump/ftTollPlaza">
               <span class="menu-link">
                 <span class="menu-bullet">
                   <span class="bullet bullet-dot"></span>
@@ -820,7 +820,7 @@
               </span>
             </div>
             <div *ngIf="isTotalRecharge" class="menu-item menu-accordion" routerLinkActive="here show"
-              data-kt-menu-trigger="click">
+              data-kt-menu-trigger="click" routerLink="/pump/ftTotalRecharge">
               <span class="menu-link">
                 <span class="menu-bullet">
                   <span class="bullet bullet-dot"></span>
@@ -830,7 +830,7 @@
               </span>
             </div>
             <div *ngIf="isVehSummary" class="menu-item menu-accordion" routerLinkActive="here show"
-              data-kt-menu-trigger="click">
+              data-kt-menu-trigger="click" routerLink="/pump/ftVehicleSummary">
               <span class="menu-link">
                 <span class="menu-bullet">
                   <span class="bullet bullet-dot"></span>
