--- a/src/app/pages/dealer/credit/add-payments/add-payments.component.html
+++ b/src/app/pages/dealer/credit/add-payments/add-payments.component.html
@@ -1,6 +1,10 @@
-
 <div class="card-header">
     <b>Add Payments</b>
+</div>
+<div class="text-sm-end">
+    <button type="button" class="btn btn-success btn-rounded mb-2 me-2" routerLink="/credit/viewPayments"
+        [routerLinkActive]="['router-link-active']">
+        View Credit Payments </button>
 </div>
 <!-- begin::Header -->
 <div class="card-header border-0 pt-5">
