--- a/src/app/pages/dealer/pump/ft-total-recharge/ft-total-recharge.component.html
+++ b/src/app/pages/dealer/pump/ft-total-recharge/ft-total-recharge.component.html
@@ -1,1 +1,4 @@
-<p>ft-total-recharge works!</p>
+<div class="card-header">
+    <b>Total Recharge </b>
+</div>
+<app-pump-tables-widget9 class="card card-xxl-stretch mb-5 mb-xl-8"></app-pump-tables-widget9>
