--- a/src/app/pages/dealer/pump/ft-vehicle-summary/ft-vehicle-summary.component.html
+++ b/src/app/pages/dealer/pump/ft-vehicle-summary/ft-vehicle-summary.component.html
@@ -1,1 +1,4 @@
-<p>ft-vehicle-summary works!</p>
+<div class="card-header">
+    <b>Vehicle Summary </b>
+</div>
+<app-pump-tables-widget10 class="card card-xxl-stretch mb-5 mb-xl-8"></app-pump-tables-widget10>
