--- a/src/app/pages/dealer/credit/view-payments/view-payments.component.html
+++ b/src/app/pages/dealer/credit/view-payments/view-payments.component.html
@@ -1,6 +1,11 @@
 <div class="card-header">
     <b>View Payments</b>
 </div>
+<div class="text-sm-end">
+    <button type="button" class="btn btn-success btn-rounded mb-2 me-2" routerLink="/credit/addPayments"
+        [routerLinkActive]="['router-link-active']">
+        Add Credit Payments </button>
+</div>
 <!-- begin::Header -->
 <div class="card-header border-0 pt-5">
     <div>
